--- a/openapi/schemas/user/ImportTimeRegistrationRequest.yaml
+++ b/openapi/schemas/user/ImportTimeRegistrationRequest.yaml
@@ -12,8 +12,8 @@ items:
       type: "string"
       format: "date"
     duration:
-      $ref: Duration.yaml
+      $ref: ../Duration.yaml
     tags:
       type: array
       items:
-        $ref: Tag.yaml
+        $ref: TagConfiguration.yaml
