--- a/openapi/user/export.yaml
+++ b/openapi/user/export.yaml
@@ -2,11 +2,11 @@ post:
   tags:
     - "Export"
   operationId: "exportTimeRegistrationsForUser"
-  description: "Exports time registrations for the logged in user for a specific date range"
+  description: "Exports time registrations for a specific time period for the user logged in"
   parameters:
     - name: "start"
       in: "query"
-      description: "The start date of the export interval (inclusive)"
+      description: "The start date of the export time interval (inclusive)"
       required: true
       schema:
         type: "string"
@@ -14,7 +14,7 @@ post:
         example: "2024-03-11"
     - name: "end"
       in: "query"
-      description: "The end date of the export interval (inclusive)"
+      description: "The end date of the export time interval (inclusive)"
       required: true
       schema:
         type: "string"
@@ -29,8 +29,8 @@ post:
             type: "string"
           examples:
             Example#1:
-              value: "Time exported successfully"
+              value: "Time registrations exported successfully"
     "401":
-      $ref: "./responses/UnauthorizedError.yaml"
+      $ref: "../responses/UnauthorizedError.yaml"
     "502":
-      $ref: "./responses/BadGateway.yaml"
+      $ref: "../responses/BadGateway.yaml"
