Change responses for the OpenAPI CRUD operations from plain strings to objects containing an id.
This will allow clients to have a natural flow, where they can work on created entities

--- a/openapi/admin/tagConfiguration.yaml
+++ b/openapi/admin/tagConfiguration.yaml
@@ -43,9 +43,9 @@ post:
     "200":
       description: "The tag configuration was successfully created"
       content:
-        text/plain:
+        application/json:
           schema:
-            type: "string"
+            $ref: "../schemas/DefaultCreateResponse.yaml"
     "400":
       description: "Request contains invalid data. The tag configuration was not created"
       content:
@@ -77,9 +77,9 @@ put:
     "200":
       description: "The tag configuration was successfully updated"
       content:
-        text/plain:
+        application/json:
           schema:
-            type: "string"
+            $ref: "../schemas/DefaultUpdateResponse.yaml"
     "400":
       description: "Request contains invalid data. The tag configuration was not updated"
       content:
