--- a/openapi/admin/tagTaskMapping.yaml
+++ b/openapi/admin/tagTaskMapping.yaml
@@ -13,9 +13,9 @@ post:
     "200":
       description: "TagTask mapping successfully created"
       content:
-        text/plain:
+        application/json:
           schema:
-            type: "string"
+            $ref: "../schemas/DefaultCreateResponse.yaml"
     "400":
       description: "Request contains invalid data. The TagTask mapping could not be created"
       content:
