--- a/openapi/user/tag.yaml
+++ b/openapi/user/tag.yaml
@@ -42,9 +42,9 @@ post:
     "200":
       description: "Tag was successfully added to the time registration"
       content:
-        text/plain:
+        application/json:
           schema:
-            type: "string"
+            $ref: "../schemas/DefaultCreateResponse.yaml"
     "401":
       $ref: "../responses/UnauthorizedError.yaml"
     "400":
@@ -76,9 +76,9 @@ put:
     "200":
       description: "Tag was successfully updated"
       content:
-        text/plain:
+        application/json:
           schema:
-            type: "string"
+            $ref: "../schemas/DefaultUpdateResponse.yaml"
     "400":
       description: "The updated tag information yields an invalid tag"
     "401":
@@ -102,9 +102,9 @@ delete:
     "200":
       description: "Tag was successfully deleted"
       content:
-        text/plain:
+        application/json:
           schema:
-            type: "string"
+            $ref: "../schemas/DefaultDeleteResponse.yaml"
     "401":
       $ref: "../responses/UnauthorizedError.yaml"
     "404":
