--- a/openapi/schemas/admin/TaskResponse.yaml
+++ b/openapi/schemas/admin/TaskResponse.yaml
@@ -7,3 +7,6 @@ properties:
   name:
     type: "string"
     description: "The name of the task"
+  description:
+    type: "string"
+    description: "A description of the task"
