--- a/openapi/trireg2admin.yaml
+++ b/openapi/trireg2admin.yaml
@@ -29,6 +29,12 @@ paths:
     $ref: admin/tagConfiguration.yaml
   /config/task-tag:
     $ref: admin/tagTaskMapping.yaml
+  /user/permission:
+    $ref: admin/userPermission.yaml
+  /user-group/user:
+    $ref: admin/userGroupAdministration.yaml
+  /user-group:
+    $ref: admin/userGroup.yaml
 components:
   securitySchemes:
     openId:
