--- a/openapi/admin/userPermission.yaml
+++ b/openapi/admin/userPermission.yaml
@@ -7,6 +7,9 @@ get:
     - name: "userId"
       in: "query"
       required: true
+      schema:
+        type: "integer"
+        format: "int64"
   responses:
     "200":
       description: "Successfully fetched all user permissions"
@@ -16,6 +19,10 @@ get:
             type: array
             items:
               $ref: "../schemas/admin/UserPermissionType.yaml"
+    "401":
+      $ref: "../responses/UnauthorizedError.yaml"
+    "403":
+      $ref: "../responses/ForbiddenError.yaml"
 post:
   tags:
     - "UserPermission"
@@ -25,6 +32,9 @@ post:
     - name: "userId"
       in: "query"
       required: true
+      schema:
+        type: "integer"
+        format: "int64"
   requestBody:
     content:
       application/json:
@@ -39,6 +49,10 @@ post:
         application/json:
           schema:
             $ref: "../schemas/DefaultCreateResponse.yaml"
+    "401":
+      $ref: "../responses/UnauthorizedError.yaml"
+    "403":
+      $ref: "../responses/ForbiddenError.yaml"
 delete:
   tags:
     - "UserPermission"
@@ -48,6 +62,9 @@ delete:
     - name: "userId"
       in: "query"
       required: true
+      schema:
+        type: "integer"
+        format: "int64"
   requestBody:
     content:
       application/json:
@@ -62,3 +79,7 @@ delete:
         application/json:
           schema:
             $ref: "../schemas/DefaultDeleteResponse.yaml"
+    "401":
+      $ref: "../responses/UnauthorizedError.yaml"
+    "403":
+      $ref: "../responses/ForbiddenError.yaml"
