--- a/openapi/trireg2admin.yaml
+++ b/openapi/trireg2admin.yaml
@@ -21,7 +21,13 @@ tags:
   - name: "TagTaskMapping"
     description: "Tag for CRUD operations related to the configuration of the relation between tasks and tag configurations"
   - name: "Task"
-    description: "Tag for CRUD operations related to the configuration of tasks"  
+    description: "Tag for CRUD operations related to the configuration of tasks"
+  - name: "UserGroup"
+    description: "Tag for CRUD operations related to the configuration of user groups"
+  - name: "UserGroupManagement"
+    description: "Tag for CRUD operations related to managing users and their relation to user groups"
+  - name: "UserPermission"
+    description: "Tag for CRUD operations related to the configuration of user permissions"
 paths:
   /task:
     $ref: admin/task.yaml
