--- a/openapi/admin/userGroupAdministration.yaml
+++ b/openapi/admin/userGroupAdministration.yaml
@@ -1,15 +1,15 @@
 get:
   tags:
-    - "UserGroupManagement"
+  - "UserGroupManagement"
   operationId: "getUsersInGroup"
-  description: "Gets all users in a user group",
+  description: "Gets all users in a user group"
   parameters:
-    - name: "userGroupId"
-      in: "query"
-      required: true
-      schema:
-        type: "integer"
-        format: "int64"
+  - name: "userGroupId"
+    in: "query"
+    required: true
+    schema:
+      type: "integer"
+      format: "int64"
   responses:
     "200":
       description: "User group relations for the specified user group"
@@ -23,7 +23,7 @@ get:
       $ref: "../responses/ForbiddenError.yaml"
 post:
   tags:
-    - "UserGroupManagement"
+  - "UserGroupManagement"
   operationId: "addUserToUserGroup"
   description: "Add a user to a user group"
   requestBody:
@@ -45,28 +45,28 @@ post:
       $ref: "../responses/ForbiddenError.yaml"
 put:
   tags:
-    - "UserGroupManagement"
+  - "UserGroupManagement"
   operationId: "updateUserRelationToUserGroup"
   description: "Add a user to a user group"
   parameters:
-    - name: "userId"
-      in: "query"
-      required: true
-      schema:
-        type: "integer"
-        format: "int64"
-    - name: "userGroupId"
-      in: "query"
-      required: true
-      schema:
-        type: "integer"
-        format: "int64"
-    - name: "userGroupRelation"
-      in: "query"
-      required: true
-      schema:
-        type: "integer"
-        format: "int64"
+  - name: "userId"
+    in: "query"
+    required: true
+    schema:
+      type: "integer"
+      format: "int64"
+  - name: "userGroupId"
+    in: "query"
+    required: true
+    schema:
+      type: "integer"
+      format: "int64"
+  - name: "userGroupRelation"
+    in: "query"
+    required: true
+    schema:
+      type: "integer"
+      format: "int64"
   responses:
     "200":
       description: "User group relation for user was successfully updated"
@@ -80,22 +80,22 @@ put:
       $ref: "../responses/ForbiddenError.yaml"
 delete:
   tags:
-    - "UserGroupManagement"
+  - "UserGroupManagement"
   operationId: "deleteUserFromUserGroup"
   description: "Remove a user from a user group"
   parameters:
-    - name: "userId"
-      in: "query"
-      required: true
-      schema:
-        type: "integer"
-        format: "int64"
-    - name: "userGroupId"
-      in: "query"
-      required: true
-      schema:
-        type: "integer"
-        format: "int64"
+  - name: "userId"
+    in: "query"
+    required: true
+    schema:
+      type: "integer"
+      format: "int64"
+  - name: "userGroupId"
+    in: "query"
+    required: true
+    schema:
+      type: "integer"
+      format: "int64"
   responses:
     "200":
       description: "User group relation for successfully deleted"
