--- a/openapi/admin/userPermission.yaml
+++ b/openapi/admin/userPermission.yaml
@@ -1,15 +1,15 @@
 get:
   tags:
-    - "UserPermission"
+  - "UserPermission"
   operationId: "getUserPermissions"
-  description: "Gets all permissions granted to a user",
+  description: "Gets all permissions granted to a user"
   parameters:
-    - name: "userId"
-      in: "query"
-      required: true
-      schema:
-        type: "integer"
-        format: "int64"
+  - name: "userId"
+    in: "query"
+    required: true
+    schema:
+      type: "integer"
+      format: "int64"
   responses:
     "200":
       description: "Successfully fetched all user permissions"
@@ -25,16 +25,16 @@ get:
       $ref: "../responses/ForbiddenError.yaml"
 post:
   tags:
-    - "UserPermission"
+  - "UserPermission"
   operationId: "addUserPermissions"
-  description: "Gets all permissions granted to a user",
+  description: "Gets all permissions granted to a user"
   parameters:
-    - name: "userId"
-      in: "query"
-      required: true
-      schema:
-        type: "integer"
-        format: "int64"
+  - name: "userId"
+    in: "query"
+    required: true
+    schema:
+      type: "integer"
+      format: "int64"
   requestBody:
     content:
       application/json:
@@ -55,16 +55,16 @@ post:
       $ref: "../responses/ForbiddenError.yaml"
 delete:
   tags:
-    - "UserPermission"
+  - "UserPermission"
   operationId: "removeUserPermissions"
-  description: "Removes all specified permissions granted to a user",
+  description: "Removes all specified permissions granted to a user"
   parameters:
-    - name: "userId"
-      in: "query"
-      required: true
-      schema:
-        type: "integer"
-        format: "int64"
+  - name: "userId"
+    in: "query"
+    required: true
+    schema:
+      type: "integer"
+      format: "int64"
   requestBody:
     content:
       application/json:
