Add more descriptions

--- a/openapi/admin/userGroupAdministration.yaml
+++ b/openapi/admin/userGroupAdministration.yaml
@@ -5,6 +5,7 @@ get:
   description: "Gets all users in a user group"
   parameters:
   - name: "userGroupId"
+    description: "ID of the user group to get users for"
     in: "query"
     required: true
     schema:
@@ -48,25 +49,12 @@ put:
   - "UserGroupManagement"
   operationId: "updateUserRelationToUserGroup"
   description: "Add a user to a user group"
-  parameters:
-  - name: "userId"
-    in: "query"
+  requestBody:
     required: true
-    schema:
-      type: "integer"
-      format: "int64"
-  - name: "userGroupId"
-    in: "query"
-    required: true
-    schema:
-      type: "integer"
-      format: "int64"
-  - name: "userGroupRelation"
-    in: "query"
-    required: true
-    schema:
-      type: "integer"
-      format: "int64"
+    content:
+      application/json:
+        schema:
+          $ref: "../schemas/admin/UserGroupRelationCreateRequest.yaml"
   responses:
     "200":
       description: "User group relation for user was successfully updated"
@@ -85,12 +73,14 @@ delete:
   description: "Remove a user from a user group"
   parameters:
   - name: "userId"
+    description: "ID of the user to remove from the user group"
     in: "query"
     required: true
     schema:
       type: "integer"
       format: "int64"
   - name: "userGroupId"
+    description: "ID of the user group to remove user from"
     in: "query"
     required: true
     schema:
