--- a/openapi/admin/userPermission.yaml
+++ b/openapi/admin/userPermission.yaml
@@ -6,6 +6,7 @@ get:
   parameters:
   - name: "userId"
     in: "query"
+    description: "ID of the user to get permissions for"
     required: true
     schema:
       type: "integer"
@@ -30,6 +31,7 @@ post:
   description: "Gets all permissions granted to a user"
   parameters:
   - name: "userId"
+    description: "ID of the user to add permissions for"
     in: "query"
     required: true
     schema:
@@ -60,6 +62,7 @@ delete:
   description: "Removes all specified permissions granted to a user"
   parameters:
   - name: "userId"
+    description: "ID of the user to delete permissions for"
     in: "query"
     required: true
     schema:
