--- a/openapi/schemas/admin/UserGroupRelations.yaml
+++ b/openapi/schemas/admin/UserGroupRelations.yaml
@@ -1,4 +1,4 @@
-type: array
+type: "array"
 items:
   required: ["userId", "relationType"]
   properties:
@@ -6,4 +6,4 @@ items:
       type: "integer"
       format: "int64"
     relationType:
-      $ref: "./UserGroupRelationType.yaml"
+      $ref: "/UserGroupRelationType.yaml"
