--- a/openapi/schemas/admin/UserGroupRelationType.yaml
+++ b/openapi/schemas/admin/UserGroupRelationType.yaml
@@ -1,15 +1,15 @@
 type: "string"
 enum:
-  - "MEMBER"
-  - "MEMBER_READER"
-  - "MEMBER_WRITER"
-  - "MEMBER_PROTECTED_READER"
-  - "MEMBER_PROTECTED_WRITER"
+  - "Member"
+  - "MemberReader"
+  - "MemberWriter"
+  - "MemberProtectedReader"
+  - "MemberProtectedWriter"
 description: >
   Describes a user's relation to a user group
   Valid values:
-  * `MEMBER` - Ordinary relation to the user group with no special rights
-  * `MEMBER_READER` - User is a member of the group and is allowed to read data of other members
-  * `MEMBER_WRITER` - User is a member of the group and is allowed to read and write data of other members
-  * `MEMBER_PROTECTED_READER` - User is a member of the group and is allowed to read data of other members while own data cannot be read/written by others in the group
-  * `MEMBER_PROTECTED_WRITER` - User is a member of the group and is allowed to read and write data of other members while own data cannot be read/written by others in the group
+  * `Member` - Ordinary relation to the user group with no special rights
+  * `MemberReader` - User is a member of the group and is allowed to read data of other members
+  * `MemberWriter` - User is a member of the group and is allowed to read and write data of other members
+  * `MemberProtectedReader` - User is a member of the group and is allowed to read data of other members while own data cannot be read/written by others in the group
+  * `MemberProtectedWriter` - User is a member of the group and is allowed to read and write data of other members while own data cannot be read/written by others in the group
