--- a/openapi/schemas/admin/UserPermissionType.yaml
+++ b/openapi/schemas/admin/UserPermissionType.yaml
@@ -1,17 +1,17 @@
 type: "string"
 enum:
-  - "MODIFY_CONFIGURATIONS"
-  - "MODIFY_TASKS"
-  - "MODIFY_GROUPS"
-  - "MODIFY_PERMISSIONS"
-  - "READ_ALL"
-  - "WRITE_ALL"
+  - "ModifyConfigurations"
+  - "ModifyTasks"
+  - "ModifyGroups"
+  - "ModifyPermissions"
+  - "ReadAll"
+  - "WriteAll"
 description: >
   Describes a user's permission to performing certain operations
   Valid values:
-  * `MODIFY_CONFIGURATIONS` - User is allowed to create, edit, update, and delete tag configurations and define the relation to existing tasks
-  * `MODIFY_TASKS` - User is allowed to create, edit, update, and delete tasks
-  * `MODIFY_GROUPS` - User is a allowed to modify create, modify, and update user groups
-  * `MODIFY_PERMISSIONS` - User is allowed to add and remove permissions from a user
-  * `READ_ALL` - User can read data on all users
-  * `WRITE_ALL` - User can read and write data on all users
+  * `ModifyConfigurations` - User is allowed to create, edit, update, and delete tag configurations and define the relation to existing tasks
+  * `ModifyTasks` - User is allowed to create, edit, update, and delete tasks
+  * `ModifyGroups` - User is a allowed to modify create, modify, and update user groups
+  * `ModifyPermissions` - User is allowed to add and remove permissions from a user
+  * `ReadAll` - User can read data on all users
+  * `WriteAll` - User can read and write data on all users
