--- a/openapi/schemas/admin/TagConfigurationCreateRequest.yaml
+++ b/openapi/schemas/admin/TagConfigurationCreateRequest.yaml
@@ -8,5 +8,4 @@ properties:
     type: "string"
     description: "A description of the tag configuration"
   tagConfigurationValueType:
-    type: "string"
-    description: "Describes the value type of the tag"
+    $ref: "TagConfigurationValueType.yaml"
