--- a/openapi/schemas/admin/TagConfigurationUpdateRequest.yaml
+++ b/openapi/schemas/admin/TagConfigurationUpdateRequest.yaml
@@ -7,5 +7,4 @@ properties:
     type: "string"
     description: "A description of the tag configuration"
   tagConfigurationValueType:
-    type: "string"
-    description: "Describes the value type of the tag"
+    $ref: "TagConfigurationValueType.yaml"
