--- a/openapi/schemas/admin/TagTimeRegistrationRequest.yaml
+++ b/openapi/schemas/admin/TagTimeRegistrationRequest.yaml
@@ -1,5 +1,5 @@
 type: "object"
-required: ["timeRegistrationId", "tagConfigurationId"]
+required: ["timeRegistrationId", "tagConfigurationId", "value"]
 properties:
   timeRegistrationId:
     type: "integer"
