--- a/openapi/admin/userPermission.yaml
+++ b/openapi/admin/userPermission.yaml
@@ -37,11 +37,12 @@ post:
     schema:
       type: "integer"
       format: "int64"
-  requestBody:
-    content:
-      application/json:
-        schema:
-          $ref: "../schemas/admin/UserPermissionType.yaml"
+  - name: "permission"
+    description: "The permission to add"
+    in: query
+    required: true
+    schema:
+      $ref: "../schemas/admin/UserPermissionType.yaml"
   responses:
     "200":
       description: "Successfully fetched all user permissions"
@@ -66,11 +67,12 @@ delete:
     schema:
       type: "integer"
       format: "int64"
-  requestBody:
-    content:
-      application/json:
-        schema:
-          $ref: "../schemas/admin/UserPermissionType.yaml"
+  - name: "permission"
+    description: "The permission to remove"
+    in: query
+    required: true
+    schema:
+      $ref: "../schemas/admin/UserPermissionType.yaml"
   responses:
     "200":
       description: "Successfully deleted user permissions"
