Change openapi 'status' for time registrations and import to enumerations.

--- a/openapi/schemas/user/ImportTimeRegistrationResponse.yaml
+++ b/openapi/schemas/user/ImportTimeRegistrationResponse.yaml
@@ -6,8 +6,7 @@ items:
       type: "integer"
       format: "int64"
     status:
-      type: "string"
-      description: "Describes the status of importing the time registration (SUCCESS, PENDING, FAILED)"
+      $ref: "ImportTimeRegistrationStatus.yaml"
     message:
       description: "Provides a description of the import status"
       type: "string"
