--- a/openapi/schemas/user/TimeRegistrationResponse.yaml
+++ b/openapi/schemas/user/TimeRegistrationResponse.yaml
@@ -20,5 +20,4 @@ properties:
   duration:
     $ref: ../Duration.yaml
   status:
-    description: "Describes the status of the time registration"
-    type: string 
+    $ref: TimeRegistrationStatus.yaml
