--- a/openapi/schemas/user/TimeRegistrationUpdateRequest.yaml
+++ b/openapi/schemas/user/TimeRegistrationUpdateRequest.yaml
@@ -6,5 +6,4 @@ properties:
   duration:
     $ref: ../Duration.yaml
   status:
-    description: "Describes the status of the time registration (PENDING, VALID, INVALID)"
-    type: string
+    $ref: TimeRegistrationStatus.yaml
