--- a/openapi/schemas/user/TimeRegistrationsByTaskResponse.yaml
+++ b/openapi/schemas/user/TimeRegistrationsByTaskResponse.yaml
@@ -28,5 +28,4 @@ items:
           duration:
             $ref: ../Duration.yaml
           status:
-            description: "Describes the status of the time registration (PENDING, VALID, INVALID)"
-            type: string
+            $ref: TimeRegistrationStatus.yaml
