--- a/openapi/schemas/user/ImportTimeRegistrationStatus.yaml
+++ b/openapi/schemas/user/ImportTimeRegistrationStatus.yaml
@@ -6,6 +6,6 @@ enum:
 description: >
   The status of importing a time registration
   Valid values:
-  * `valid` - The registration is valid and has been imported successfully
-  * `pending` - The registration is valid, but is waiting the approval of the user. Used when a user imports data for another user.
-  * `failed` - Something is wrong with the registration, it has not been imported.
+  * `valid` - The time registration is valid and has been imported successfully
+  * `pending` - The time registration is valid, but is awaiting the approval of the user. Used when a user imports data for another user.
+  * `failed` - Something is wrong with the time registration, it has not been imported.
